# autonomous-bugfix

./: .gitignore  LICENSE  README.md  log.investigation_output  main.py  pyproject.toml
assets/: production-checklist.md
logs/: investigator_output  investigator_output.json  step_chain.json  triage_output
logs/1d31eda7-9d7e-4d55-887f-a23b04652b11/: 20260715_191350_clone_project.json  20260715_191350_scan_bugs.json  20260715_191415_triage.json
logs/4516b15e-7c21-45e3-8884-a5a2ee863d63/: 20260715_151916_clone_project.json  20260715_151918_scan_bugs.json  20260715_151931_select_bug.json  20260715_151931_triage.json  20260715_151946_investigate.json  20260715_151951_investigate.json  20260715_152001_select_bug.json  20260715_152019_investigate.json  20260715_152019_select_bug.json  20260715_152031_investigate.json  20260715_152031_select_bug.json  20260715_152044_investigate.json  20260715_152044_select_bug.json  20260715_152055_investigate.json  20260715_152055_select_bug.json  20260715_152104_investigate.json  20260715_152104_select_bug.json  20260715_152113_investigate.json  20260715_152113_select_bug.json
logs/55fa9100-0526-427c-939e-ec1119bcbeb1/: 20260715_152740_clone_project.json  20260715_152741_scan_bugs.json  20260715_152755_triage.json  20260715_152807_select_bug.json  20260715_152851_investigate.json  20260715_152851_select_bug.json
logs/865910b8-6ed7-4449-bf36-ea056dddc08a/: 20260715_191817_clone_project.json  20260715_191817_scan_bugs.json  20260715_191830_triage.json  20260715_191841_select_bug.json  (+3 more)
src/: config.py  main.py  states.py  step_logger.py
(+44 files in other folders)
