[project]
name = "autonomous-bugfix"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "docker>=7.2.0",
    "ipynb>=0.5.1",
    "langgraph>=1.2.9",
    "langsmith>=0.10.2",
    "loguru>=0.7.3",
    "openai>=1.40.0",
    "pydantic-settings>=2.14.2",
    "pytest>=9.1.1",
]
